2010-01-08  kitone  <kitone@gna.org>

	* src/player.cc:
	* src/player.h:
	* src/vp/gstplayer.cc:
	* src/vp/gstplayer.h:
	Fix bug #14915 : Add the possibility of choice of an audio track to the	player.

2010-01-08  kitone  <kitone@gna.org>

	* src/vp/videoplayer.cc:
	FIXME comment for later.

2010-01-06  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformgenerator.cc:
	Launch a gstreamer error if we cannot get the duration of the stream.

2010-01-05  kitone  <kitone@gna.org>

	* src/we/waveformrenderer.cc:
	Return zero if the duration is not positive. (patch by Philip Jägenstedt <foolip>)

2010-01-05  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformgenerator.cc:
	Update the duration value after the EOS signal and only set duration on
	waveform if we actually know it. (patch by Philip Jägenstedt <foolip>)

2010-01-05  kitone  <kitone@gna.org>

	* src/gui/menubar.cc:
	Change AccelKey of Extensions (conflict with Edit).

2010-01-01  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Fix typo.

2010-01-01  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2009-12-31  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.35.1 release.

2009-12-31  kitone  <kitone@gna.org>

	* configure.in:
	Update gstreamermm version to 0.10.4.

	* src/vp/gstplayer.cc:
	Remove gstreamermm check version.

2009-12-30  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.35.0 release.

2009-12-30  kitone  <kitone@gna.org>

	* src/waveform.cc:
	Remove g_warning to simple information msg. Avoid wrong bugs reports.

2009-12-30  kitone  <kitone@gna.org>

	* src/gstreamer_utility.h:
	* src/vp/gstplayer.cc:
	Add GSTREAMERMM_CHECK_VERSION. Support gstreamermm version >= 0.10.3 without patch.

2009-12-30  kitone  <kitone@gna.org>

	* plugins/actions/keyframesmanagement/mediadecoder.h:
	* plugins/actions/wavefrommanagement/mediadecoder.h: